--- a/roboeco.html
+++ b/roboeco.html
@@ -12,6 +12,8 @@ body {
   width: 100%;
   height: 700px;
   max-width: 100%;
+  font-size: 15px;
+  text-align: center;
 }
 
 </style>
@@ -76,20 +78,20 @@ var maxNodes = 5;
 var maxValue = 100;
 
 var data = {
-  name: "Robotics Ecosystem",
-  value: 120,
+  name: "Robotics \nEcosystem",
+  value: 100,
   children: [
     {
-      name: "New Tech",
-      value: 90,
+      name: " New \n Tech",
+      value: 80,
       children: [
         {
           name: "mmwave",
           value: 70
         },
         {
-          name: "Stereo \n camera",
-          value: 30
+          name: "Stereo \n Camera",
+          value: 70
         },
         {
           name: "iToF",
@@ -101,55 +103,55 @@ var data = {
         },
         {
           name: "Hybrid \n MCUs",
-          value: 30
+          value: 50
         },
         {
           name: "HPD BLDC \n Motor",
-          value: 20
+          value: 50
         },
         {
           name: "Thread",
-          value: 10
+          value: 50
         },
         {
           name: "Augmented \n Reality",
-          value: 30
+          value: 70
         },
         {
           name: "Machine \n Learning",
-          value: 20
+          value: 50
         },
         {
           name: "BLE 5.x",
-          value: 10
+          value: 50
         },
         {
           name: "SLAM",
-          value: 20
+          value: 50
         }
       ]
     },
     {
-      name: "Modular Frameworks",
-      value: 90,
+      name: " Modular \n Frameworks",
+      value: 80,
       children: [
         {
-          name: "Modular \n FW \n Architecture",
+          name: " Modular \n FW \n Architecture",
           value: 60
         },
         {
-          name: "Universal \n Tools \n Debug \n Protocol \n (UTDP)",
+          name: " Universal \n Debug \n Protocol \n (UTDP)",
           value: 60
         },
         {
-          name: "Robotics \n Operating \n System \n (ROS1 & ROS2)",
+          name: " Robotics \n Operating \n System \n (ROS)",
           value: 60
         }
       ]
     },
     {
-      name: "User-facing Solutions",
-      value: 90,
+      name: " User-facing \n Solutions",
+      value: 80,
       children: [
         {
           name: "Virtual Zone \n System",
@@ -157,29 +159,33 @@ var data = {
         },
         {
           name: "Mobile App \n for Robots",
-          value: 60
+          value: 70
         },
         {
           name: "Web App",
-          value: 40
+          value: 70
         },
         {
           name: "User \n Data \n Analytics",
+          value: 70
+        },
+        {
+          name: "Customer \n Relationship \n Management \n (CRM)",
+          value: 30
+        },
+        {
+          name: "Content \n Management \n Solution \n (CMS)",
           value: 40
         },
         {
           name: "Customer \n Relationship \n Management \n (CRM)",
-          value: 40
-        },
-        {
-          name: "Content \n Management \n Solution \n (CMS)",
           value: 40
         }
       ]
     },
     {
       name: "Agile Dev. Infra.",
-      value: 90,
+      value: 80,
       children: [
         {
           name: "FW Debug \n & Online Testing \n System (FDOT)",
@@ -187,11 +193,11 @@ var data = {
         },
         {
           name: "Sprint \n management \n tools",
-          value: 60
+          value: 70
         },
         {
           name: "Continuous \n Integration \n& Deployment \n (CI / CD)",
-          value: 50
+          value: 70
         },
         {
           name: "Testing Management \n Tools",
